--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOk5b5lQA1xxF5d8Joe6OpA",
+      "authorship_tag": "ABX9TyODmXVoI5I7UQ+XMlUsCzdg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -519,7 +519,7 @@
         "    marks = student_marks[query_name] #list of marks of a given student input\n",
         "    print(format(sum(marks)/3, '.2f')) #for getting values upto 2 decimal places we use format function"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,13 +549,79 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AGApyLL8x5UM"
+        "id": "AGApyLL8x5UM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a7ea599a-67ea-489a-f2bd-e44ec84f7652"
       },
       "source": [
-        ""
+        "N = int(input())\n",
+        "lst = []\n",
+        "for i in range(N): #So with this operation we have to run for loop N times.\n",
+        "    \n",
+        "   \n",
+        "#Input command will be in the form of string we converted it into list \n",
+        "#like insert 10 1 output will be ['insert', '10' '1']\n",
+        "    cmd = input().split(' ')\n",
+        "\n",
+        "         \n",
+        "    if cmd[0] == 'insert':\n",
+        "        lst.insert(int(cmd[1]), int(cmd[2])) \n",
+        "        \n",
+        "    elif cmd[0] == 'print':\n",
+        "        print(lst)\n",
+        "        \n",
+        "    elif cmd[0] == 'remove':\n",
+        "        lst.remove(int(cmd[1])) #as per question we have to remove value at index 1\n",
+        "    \n",
+        "    elif cmd[0] == 'append':\n",
+        "        lst.append(int(cmd[1])) #as per question we have to append the value at index 1\n",
+        "\n",
+        "    elif cmd[0] == 'sort': \n",
+        "        lst.sort()\n",
+        "        \n",
+        "    elif cmd[0] == 'pop':\n",
+        "        lst.pop()\n",
+        "        \n",
+        "    else:\n",
+        "        lst.reverse()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n",
+            "insert 0 5\n",
+            "insert 1 0\n",
+            "insert 0 6\n",
+            "print\n",
+            "[6, 5, 0]\n",
+            "remove 6\n",
+            "append 9\n",
+            "append 1\n",
+            "sort\n",
+            "print\n",
+            "[0, 1, 5, 9]\n",
+            "pop\n",
+            "reverse\n",
+            "print\n",
+            "[5, 1, 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "R7vqFxivHM2K"
+      },
+      "source": [
+        "#**Problem 13**: Tuples\n",
+        "Full problem click [here](https://www.hackerrank.com/challenges/python-tuples/problem?isFullScreen=false)"
+      ]
     },
     {
       "cell_type": "code",
