--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyODmXVoI5I7UQ+XMlUsCzdg",
+      "authorship_tag": "ABX9TyNC3pRl00dSulD71N4oWRI/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -587,7 +587,7 @@
         "    else:\n",
         "        lst.reverse()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,13 +626,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HHsdx4jax5Yk"
+        "id": "HHsdx4jax5Yk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6835ee63-e7ad-474f-a17f-8f88fc3cd812"
       },
       "source": [
-        ""
+        "if __name__ == '__main__':\n",
+        "    n = int(input())\n",
+        "    integer_list = map(int, input().split())\n",
+        "    t = tuple(integer_list)\n",
+        "    print(hash(t))\n",
+        "    "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "13\n",
+            "3430015387546\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EhUggIQEvqoK"
+      },
+      "source": [
+        "# **Problem 14**: sWAP Case"
+      ]
     },
     {
       "cell_type": "code",
