--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNC3pRl00dSulD71N4oWRI/",
+      "authorship_tag": "ABX9TyOQ5QT7cCmAY/SLKO/EZ7rG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -640,7 +640,7 @@
         "    print(hash(t))\n",
         "    "
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -659,19 +659,59 @@
         "id": "EhUggIQEvqoK"
       },
       "source": [
-        "# **Problem 14**: sWAP Case"
+        "# **Problem 14**: sWAP Case\n",
+        "\n",
+        "Full problem click [here](https://www.hackerrank.com/challenges/swap-case/problem?isFullScreen=false)\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7gum80CHx5cz"
+        "id": "7gum80CHx5cz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4916e0d8-f642-41e0-f0e1-7f3b59c9e493"
       },
       "source": [
-        ""
+        "def swap_case(s):\n",
+        "    x = ''\n",
+        "    for c in s:\n",
+        "        if c.isupper():\n",
+        "            c = c.lower()\n",
+        "            \n",
+        "        else:\n",
+        "            c = c.upper()\n",
+        "        x+= ' '.join(c)\n",
+        "    return x\n",
+        "        \n",
+        "if __name__ == '__main__':\n",
+        "    s = input()\n",
+        "    result = swap_case(s)\n",
+        "    print(result)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HackerRank.com presents \"Pythonist 2\".\n",
+            "hACKERrANK.COM PRESENTS \"pYTHONIST 2\".\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WLLcoSMejJf1"
+      },
+      "source": [
+        "# **Problem 15**: String split and join\n",
+        "For full problem click [here](https://www.hackerrank.com/challenges/swap-case/problem?isFullScreen=false)."
+      ]
     },
     {
       "cell_type": "code",
