--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQ5QT7cCmAY/SLKO/EZ7rG",
+      "authorship_tag": "ABX9TyPQ72d/xHQB1TjF7qlPJfrk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -691,7 +691,7 @@
         "    result = swap_case(s)\n",
         "    print(result)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,19 +710,41 @@
       },
       "source": [
         "# **Problem 15**: String split and join\n",
-        "For full problem click [here](https://www.hackerrank.com/challenges/swap-case/problem?isFullScreen=false)."
+        "For full problem click [here](https://www.hackerrank.com/challenges/python-string-split-and-join/problem?isFullScreen=false)."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DpAprb-nx5hA"
+        "id": "DpAprb-nx5hA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e44f7d74-8ec7-436a-b4c9-018949cc1dcb"
       },
       "source": [
-        ""
+        "def split_and_join(line):\n",
+        "    # write your code here\n",
+        "    line = line.split(\" \")\n",
+        "    line = \"-\".join(line)\n",
+        "    return line\n",
+        "    \n",
+        "if __name__ == '__main__':\n",
+        "    line = input()\n",
+        "    result = split_and_join(line)\n",
+        "    print(result)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is a string.\n",
+            "This-is-a-string.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -734,6 +756,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gIwnJNgxUUUs"
+      },
+      "source": [
+        "# **Problem 16**: What's your name?\n",
+        "For full problem click [here](https://www.hackerrank.com/challenges/whats-your-name/problem?isFullScreen=false)"
+      ]
     },
     {
       "cell_type": "code",
