--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPQ72d/xHQB1TjF7qlPJfrk",
+      "authorship_tag": "ABX9TyOEvf1E+HAODMnB3oisO9/e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -734,7 +734,7 @@
         "    result = split_and_join(line)\n",
         "    print(result)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,17 +745,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mWThlwKrx5k_"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -770,18 +759,142 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tJqS0y1Zx5pD"
+        "id": "tJqS0y1Zx5pD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6476064f-488d-401e-b267-0223682e1c8f"
+      },
+      "source": [
+        "def print_full_name(first, last):\n",
+        "    # Write your code here\n",
+        "    print(f'Hello {first_name} {last_name}! You just delved into python.')\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    first_name = input()\n",
+        "    last_name = input()\n",
+        "    print_full_name(first_name, last_name)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shubham\n",
+            "Dubey\n",
+            "Hello Shubham Dubey! You just delved into python.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "17Bs1kHHZYC7"
+      },
+      "source": [
+        "# Problem 17: Mutations\n",
+        "For full problem click [here](https://www.hackerrank.com/challenges/python-mutations/problem?isFullScreen=false)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M-8c_yakx5s7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "23f18c33-7c6a-4cd8-e183-9404a565e6d4"
+      },
+      "source": [
+        "\n",
+        "def mutate_string(string, position, character):\n",
+        "    l = list(string)\n",
+        "    l[position] = character\n",
+        "    l = ''.join(l)\n",
+        "    return l\n",
+        "    \n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    s = input()\n",
+        "    i, c = input().split()\n",
+        "    s_new = mutate_string(s, int(i), c)\n",
+        "    print(s_new)\n",
+        "    "
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "abcdfghij\n",
+            "4 e\n",
+            "abcdeghij\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oeAq6JpYZ53_"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M-8c_yakx5s7"
+        "id": "hiG-yUWOZ57c"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z_uNPEuhZ5-6"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IOQ8bM00Z6Ck"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cDQeuGEPZ6Ft"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rjVWY6wFZ6JE"
       },
       "source": [
         ""
