--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOEvf1E+HAODMnB3oisO9/e",
+      "authorship_tag": "ABX9TyMk0E88PLcuJ/R5CpE/QgBP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -156,17 +156,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7PZKd9E-5mFj"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -775,7 +764,7 @@
         "    last_name = input()\n",
         "    print_full_name(first_name, last_name)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -823,7 +812,7 @@
         "    print(s_new)\n",
         "    "
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,15 +826,66 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "oeAq6JpYZ53_"
+        "id": "DTNHE_bEgxuj"
       },
       "source": [
-        ""
+        "# **Problem 18**: Find a String\n",
+        "For full problem click [here](https://www.hackerrank.com/challenges/find-a-string/problem?isFullScreen=false)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oeAq6JpYZ53_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "da21ba17-151f-4bd3-b2d9-fdffb83ec7eb"
+      },
+      "source": [
+        "def count_substring(string, sub_string):\n",
+        "  sl = len(string) # Find the lenght of the main string\n",
+        "  ssl = len(sub_string) # Find the lenght of substring\n",
+        "  c = 0 # intial value to be zero\n",
+        "\n",
+        "  for i in range(sl-ssl+1): # The range is so chosen because python counting starts from zero.\n",
+        "    if (string[i:(i+ssl)]) == sub_string:\n",
+        "      c +=1\n",
+        "\n",
+        "  return c\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    string = input().strip() # Strip function removes the spaces in front and back of the string.\n",
+        "    sub_string = input().strip()\n",
+        "    \n",
+        "    count = count_substring(string, sub_string)\n",
+        "    print(count)"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ABCDECDE\n",
+            "CDE\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bc9DfqUMt53_"
+      },
+      "source": [
+        "# **Problem 19**: String Validators\n",
+        "full problem click [here](https://www.hackerrank.com/challenges/string-validators/problem?isFullScreen=false)"
+      ]
     },
     {
       "cell_type": "code",
@@ -855,7 +895,7 @@
       "source": [
         ""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -866,7 +906,7 @@
       "source": [
         ""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -877,7 +917,7 @@
       "source": [
         ""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -888,7 +928,7 @@
       "source": [
         ""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
