--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMk0E88PLcuJ/R5CpE/QgBP",
+      "authorship_tag": "ABX9TyPyFpFuTCo4mDYoU8aM9LV7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -864,7 +864,7 @@
         "    count = count_substring(string, sub_string)\n",
         "    print(count)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,13 +890,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hiG-yUWOZ57c"
+        "id": "hiG-yUWOZ57c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a5c3e42c-0d56-4ee5-f05a-a70189d1f003"
       },
       "source": [
-        ""
+        "# Here we will use any function\n",
+        "# The any function returns True if any item in an iterable are true otherwise it will return False\n",
+        "# If the iterable object is empty it will return false\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    s = str(input())\n",
+        "    print(any([i.isalnum() for i in s]))\n",
+        "    print(any([i.isalpha() for i in s]))\n",
+        "    print(any([i.isdigit() for i in s]))\n",
+        "    print(any([i.islower() for i in s]))\n",
+        "    print(any([i.isupper() for i in s]))\n",
+        "        "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "qA2\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
