--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPyFpFuTCo4mDYoU8aM9LV7",
+      "authorship_tag": "ABX9TyP7KtoGq80o7aIAKB03j99X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -910,7 +910,7 @@
         "    print(any([i.isupper() for i in s]))\n",
         "        "
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,15 +927,116 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "Z_uNPEuhZ5-6"
+        "id": "NqXdGetS1H2X"
       },
       "source": [
-        ""
+        "## **Problem 20**: Text Aligment\n",
+        "full problem click [here](https://www.hackerrank.com/challenges/text-alignment/problem?isFullScreen=false&h_r=next-challenge&h_v=zen)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z_uNPEuhZ5-6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a852d566-ac13-4cf1-b22a-f8d34710f0f8"
+      },
+      "source": [
+        "thickness = int(input()) #This must be an odd number\n",
+        "c = 'H'\n",
+        "\n",
+        "#Top Cone\n",
+        "for i in range(thickness):\n",
+        "    print((c*i).rjust(thickness-1)+c+(c*i).ljust(thickness-1))\n",
+        "\n",
+        "#Top Pillars\n",
+        "for i in range(thickness+1):\n",
+        "    print((c*thickness).center(thickness*2)+(c*thickness).center(thickness*6))\n",
+        "\n",
+        "#Middle Belt\n",
+        "for i in range((thickness+1)//2):\n",
+        "    print((c*thickness*5).center(thickness*6))    \n",
+        "\n",
+        "#Bottom Pillars\n",
+        "for i in range(thickness+1):\n",
+        "    print((c*thickness).center(thickness*2)+(c*thickness).center(thickness*6))    \n",
+        "\n",
+        "#Bottom Cone\n",
+        "for i in range(thickness):\n",
+        "    print(((c*(thickness-i-1)).rjust(thickness)+c+(c*(thickness-i-1)).ljust(thickness)).rjust(thickness*6))"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "         H         \n",
+            "        HHH        \n",
+            "       HHHHH       \n",
+            "      HHHHHHH      \n",
+            "     HHHHHHHHH     \n",
+            "    HHHHHHHHHHH    \n",
+            "   HHHHHHHHHHHHH   \n",
+            "  HHHHHHHHHHHHHHH  \n",
+            " HHHHHHHHHHHHHHHHH \n",
+            "HHHHHHHHHHHHHHHHHHH\n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH     \n",
+            "     HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH     \n",
+            "     HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH     \n",
+            "     HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH     \n",
+            "     HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH     \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "     HHHHHHHHHH                              HHHHHHHHHH                         \n",
+            "                                        HHHHHHHHHHHHHHHHHHH \n",
+            "                                         HHHHHHHHHHHHHHHHH  \n",
+            "                                          HHHHHHHHHHHHHHH   \n",
+            "                                           HHHHHHHHHHHHH    \n",
+            "                                            HHHHHHHHHHH     \n",
+            "                                             HHHHHHHHH      \n",
+            "                                              HHHHHHH       \n",
+            "                                               HHHHH        \n",
+            "                                                HHH         \n",
+            "                                                 H          \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eygdkirH1y-J"
+      },
+      "source": [
+        "## Problem 21: Text Wrap\n",
+        "\n",
+        "full problem click [here](https://www.hackerrank.com/challenges/text-wrap/problem?isFullScreen=false&h_r=next-challenge&h_v=zen&h_r=next-challenge&h_v=zen)"
+      ]
     },
     {
       "cell_type": "code",
