Text Wrap problem

--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP7KtoGq80o7aIAKB03j99X",
+      "authorship_tag": "ABX9TyPeTCk54lywwuH0xvy0ZUz7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1041,18 +1041,79 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IOQ8bM00Z6Ck"
+        "id": "IOQ8bM00Z6Ck",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5fb90c0f-665f-44d7-9a3d-36a55fee749e"
       },
       "source": [
-        ""
+        "# textwrap is a python library\n",
+        "import textwrap\n",
+        "\n",
+        "def wrap(string, max_width):\n",
+        "    return textwrap.fill(string,max_width)\n",
+        " \n",
+        "if __name__ == '__main__':\n",
+        "    string, max_width = input(), int(input())\n",
+        "    result = wrap(string, max_width)\n",
+        "    print(result)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "abcdefghijklmnopqrstuvwxyz\n",
+            "4\n",
+            "abcd\n",
+            "efgh\n",
+            "ijkl\n",
+            "mnop\n",
+            "qrst\n",
+            "uvwx\n",
+            "yz\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cp_U8KGqMvQa"
+      },
+      "source": [
+        "# Problem 22: Designer Door Mat\n",
+        "full problem click [here](https://www.hackerrank.com/challenges/designer-door-mat/problem?isFullScreen=false)"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "cDQeuGEPZ6Ft"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SrEJ1jA3NKw7"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8CSHdnIFNK0o"
       },
       "source": [
         ""
