Designer Door Mat

--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPeTCk54lywwuH0xvy0ZUz7",
+      "authorship_tag": "ABX9TyMCUKcpaZ1kMR8kRAgXycKR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1091,13 +1091,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cDQeuGEPZ6Ft"
+        "id": "cDQeuGEPZ6Ft",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f86f87d4-f781-4e26-b35f-a4381b83a5ae"
       },
       "source": [
-        ""
+        "# Enter your code here. Read input from STDIN. Print output to STDOUT\n",
+        "N,M = map(int,input().split())\n",
+        "for i in range(1, N, 2):\n",
+        "    print((i*'.|.').center(M,'-'))\n",
+        "print('WELCOME'.center(M,'-'))\n",
+        "for i in range(N-2, -1, -2):\n",
+        "    print((i*'.|.').center(M,'-'))\n"
       ],
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15 45\n",
+            "---------------------.|.---------------------\n",
+            "------------------.|..|..|.------------------\n",
+            "---------------.|..|..|..|..|.---------------\n",
+            "------------.|..|..|..|..|..|..|.------------\n",
+            "---------.|..|..|..|..|..|..|..|..|.---------\n",
+            "------.|..|..|..|..|..|..|..|..|..|..|.------\n",
+            "---.|..|..|..|..|..|..|..|..|..|..|..|..|.---\n",
+            "-------------------WELCOME-------------------\n",
+            "---.|..|..|..|..|..|..|..|..|..|..|..|..|.---\n",
+            "------.|..|..|..|..|..|..|..|..|..|..|.------\n",
+            "---------.|..|..|..|..|..|..|..|..|.---------\n",
+            "------------.|..|..|..|..|..|..|.------------\n",
+            "---------------.|..|..|..|..|.---------------\n",
+            "------------------.|..|..|.------------------\n",
+            "---------------------.|.---------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
