String Formatting problem

--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMCUKcpaZ1kMR8kRAgXycKR",
+      "authorship_tag": "ABX9TyP/weqN2dyUwLZE/Do7kTOV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1059,7 +1059,7 @@
         "    result = wrap(string, max_width)\n",
         "    print(result)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1106,7 +1106,7 @@
         "for i in range(N-2, -1, -2):\n",
         "    print((i*'.|.').center(M,'-'))\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,6 +1133,70 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4XDiz94dRcH3"
+      },
+      "source": [
+        "# Problem 23: String Formatting\n",
+        "full problem click [here](https://www.hackerrank.com/challenges/python-string-formatting/problem?isFullScreen=false)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RoNUxkwYRnRq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "25f9a570-da88-4ff2-c3b4-6d83864e5428"
+      },
+      "source": [
+        "def print_formatted(number):\n",
+        "\n",
+        "  # First we will define the space that we want to leave between the numbers\n",
+        "  # The space should be equal to the len of the maximum binary number\n",
+        "  # For that we define a variable \n",
+        "    l = len(\"{0:b}\".format(number))\n",
+        "    \n",
+        "  # we will use the format function for defining the numbers \n",
+        "  # d for Decimal, o for Octal, X for Hexadecimal, b for Binary\n",
+        "    for i in range(1, number + 1):\n",
+        "        print((\"{0:{w}d} {0:{w}o} {0:{w}X} {0:{w}b}\".format(i,w=l)))\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    n = int(input())\n",
+        "    print_formatted(n)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "17\n",
+            "    1     1     1     1\n",
+            "    2     2     2    10\n",
+            "    3     3     3    11\n",
+            "    4     4     4   100\n",
+            "    5     5     5   101\n",
+            "    6     6     6   110\n",
+            "    7     7     7   111\n",
+            "    8    10     8  1000\n",
+            "    9    11     9  1001\n",
+            "   10    12     A  1010\n",
+            "   11    13     B  1011\n",
+            "   12    14     C  1100\n",
+            "   13    15     D  1101\n",
+            "   14    16     E  1110\n",
+            "   15    17     F  1111\n",
+            "   16    20    10 10000\n",
+            "   17    21    11 10001\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "SrEJ1jA3NKw7"
@@ -1140,7 +1204,7 @@
       "source": [
         ""
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
