--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/weqN2dyUwLZE/Do7kTOV",
+      "authorship_tag": "ABX9TyNXLprQ4jrBFapQnsapcLBQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1168,7 +1168,7 @@
         "    n = int(input())\n",
         "    print_formatted(n)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1194,6 +1194,16 @@
             "   17    21    11 10001\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9rrzJ1pAl_t7"
+      },
+      "source": [
+        "# Problem 24: Alphabet Rangoli\n",
+        "full problem click [here](https://www.hackerrank.com/challenges/alphabet-rangoli/problem?isFullScreen=false&h_r=next-challenge&h_v=zen)"
       ]
     },
     {
