--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNXLprQ4jrBFapQnsapcLBQ",
+      "authorship_tag": "ABX9TyM+ZGKHekcRrJgJc/C/xah6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1229,14 +1229,57 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CSHpi8BmJ5fr"
+      },
+      "source": [
+        "# Problem 25: Capitalized\n",
+        "full problem click [here](https://www.hackerrank.com/challenges/capitalize/problem?isFullScreen=false)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "rjVWY6wFZ6JE"
+        "id": "rjVWY6wFZ6JE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0188d557-8730-43b9-d6dc-8ffb8d96af2f"
+      },
+      "source": [
+        "def solve(s):\n",
+        "    l = s.split(\" \")\n",
+        "    s = ''\n",
+        "    for i in l:\n",
+        "        s = s+i.capitalize() + ' '\n",
+        "    return s\n",
+        "\n",
+        "m = input()\n",
+        "result = solve(m)\n",
+        "print(result)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello there. how is it going?\n",
+            "Hello There. How Is It Going? \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WXT9OtiGLaar"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     }
   ]
